// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatusIcon render snapshots 📸 AccountStatusIcon must match snapshot for ACCEPTED 1`] = `
<div>
  <div
    className="accounts__icons"
  >
    <svg
      fill="currentColor"
      height={50}
      size={50}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={50}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
      />
    </svg>
    <svg
      className="status_icon"
      color="#47E5B6"
      fill="currentColor"
      height={40}
      size={40}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#47E5B6",
        }
      }
      viewBox="0 0 24 24"
      width={40}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
      />
    </svg>
  </div>
  <p
    className="icon__name"
  >
    TEST
  </p>
</div>
`;

exports[`AccountStatusIcon render snapshots 📸 AccountStatusIcon must match snapshot for DECLINED 1`] = `
<div>
  <div
    className="accounts__icons"
  >
    <svg
      fill="currentColor"
      height={150}
      size={150}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={150}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
      />
    </svg>
    <svg
      className="status_icon"
      color="red"
      fill="currentColor"
      height={90}
      size={90}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "red",
        }
      }
      viewBox="0 0 24 24"
      width={90}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  <p
    className="icon__name"
  >
    TEST
  </p>
</div>
`;

exports[`AccountStatusIcon render snapshots 📸 AccountStatusIcon must match snapshot for PENDING 1`] = `
<div>
  <div
    className="accounts__icons"
  >
    <svg
      fill="currentColor"
      height={100}
      size={100}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={100}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
      />
    </svg>
    <svg
      className="status_icon"
      color="#FFB400"
      fill="currentColor"
      height={60}
      size={60}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#FFB400",
        }
      }
      viewBox="0 0 24 24"
      width={60}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 2v6h.01L6 8.01 10 12l-4 4 .01.01H6V22h12v-5.99h-.01L18 16l-4-4 4-3.99-.01-.01H18V2H6z"
      />
    </svg>
  </div>
  <p
    className="icon__name"
  >
    TEST
  </p>
</div>
`;

exports[`AccountStatusIcon render snapshots 📸 AccountStatusIcon must match snapshot for invalid status 1`] = `
<div>
  <div
    className="accounts__icons"
  >
    <svg
      fill="currentColor"
      height={150}
      size={150}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={150}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
      />
    </svg>
    <span />
  </div>
  <p
    className="icon__name"
  >
    TEST
  </p>
</div>
`;
